add a new contribution from meep

--- a/README.rmd
+++ b/README.rmd
@@ -1,12 +1,20 @@
 ---
-title: My firdt git repo
+title: My first git repo
 author: Najiyah Williamson
 output: github_document
 ---
 
 # My first commit
 
-Here is some text that makes up my first commit in my first repo
+Here is some text that makes up my first commit in my first repo.
+text for another commit
+text for yet another commit
+
+___Here is some text on the test branch.____
+___Here is some more text on the test branch.___
+
+#meep
+meeeeeeep
 
 # My second commit
 
