--- a/README.rmd
+++ b/README.rmd
@@ -23,3 +23,12 @@ Here is more text that will be my second commit
 # My third commit
 
 Here is some text for my third commit
+
+#contribution from meep
+hi this is meep woot woot. here is some code
+
+```{r}
+print("hello from R")
+Sys.Date()
+```
+
